@@ -1,4 +1,6 @@
 Version 1.0.5 (?? ??? 2006)
+  - Moved over javascript code for event popups from 1.1 code to handle
+    problems with display on IE
   - Patch 1519611: Added new French-UTF8 translation
   - Patch 1558537: Updated Russian translation
   - Patch 1520078: Fix for postgreSQL PHP warnings
